Refactor model package, enable annotation-based null analysis